# tmux-huma

./: .gitignore  Cargo.toml  LICENSE  README.md  huma.tmux
.github/workflows/: release.yml
docs/: DESIGN.md
docs/superpowers/plans/: 2026-06-18-tmux-huma.md
docs/superpowers/specs/: 2026-06-18-tmux-huma-design.md  2026-06-19-huma-suspend-autoreload-design.md
scripts/: install-binary.sh
src/: autoreload.rs  battery.rs  cli.rs  config.rs  daemon.rs  icon.rs  icon_map.rs  kripto.rs  load.rs  main.rs  mode.rs  online.rs  player.rs  sensible.rs  ssh.rs  suspend.rs  tmux.rs
tests/: daemon_integration.rs  suspend_integration.rs
tests/common/: mod.rs
