[package]
name = "huma"
version = "0.1.1"
edition = "2021"
description = "tmux status-bar awareness widgets (online/mode/battery/load)."
license = "MIT"
repository = "https://github.com/kenanpelit/tmux-huma"
authors = ["Kenan Pelit <kenanpelit@gmail.com>"]

[[bin]]
name = "huma"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"
